{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 269,
  "lineage": "4a750440-6f92-53ef-01e5-fd217f481e51",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ruvector",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02fd066b86800f60c",
            "arn": "arn:aws:ec2:us-east-1:332896938510:instance/i-0a92d8b8fc42aab1a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ruvector-ruvector-instance-profile",
            "id": "i-0a92d8b8fc42aab1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c0ef22bc49b83a00",
            "private_dns": "ip-10-0-1-208.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.208",
            "public_dns": "ec2-32-197-181-165.compute-1.amazonaws.com",
            "public_ip": "32.197.181.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0da5bba9a3912bac3",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027e6cee225e84b03",
            "tags": {
              "Name": "ruvector-ruvector-service"
            },
            "tags_all": {
              "Name": "ruvector-ruvector-service"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0b89f97b1142a325f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_cloudwatch_log_group.ruvector",
            "aws_iam_instance_profile.ruvector",
            "aws_iam_role.ruvector",
            "aws_security_group.alb",
            "aws_security_group.rag_app",
            "aws_security_group.ruvector",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:internet-gateway/igw-0d5f5b93ecbe6aa90",
            "id": "igw-0d5f5b93ecbe6aa90",
            "owner_id": "332896938510",
            "tags": {
              "Name": "ruvector-rag-igw"
            },
            "tags_all": {
              "Name": "ruvector-rag-igw"
            },
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:332896938510:loadbalancer/app/ruvector-rag-alb/3568cbe0dfe904cc",
            "arn_suffix": "app/ruvector-rag-alb/3568cbe0dfe904cc",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ruvector-rag-alb-681329495.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:332896938510:loadbalancer/app/ruvector-rag-alb/3568cbe0dfe904cc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ruvector-rag-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08711b0920d8ca845"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-007b3707404b67d10"
              },
              {
                "subnet_id": "subnet-027e6cee225e84b03"
              }
            ],
            "subnets": [
              "subnet-007b3707404b67d10",
              "subnet-027e6cee225e84b03"
            ],
            "tags": {
              "Name": "ruvector-rag-alb"
            },
            "tags_all": {
              "Name": "ruvector-rag-alb"
            },
            "vpc_id": "vpc-09c568c88721cd27c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:332896938510:listener/app/ruvector-rag-alb/3568cbe0dfe904cc/f1113be21c44b852",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:332896938510:targetgroup/ruvector-rag-app-tg/094979e33646a0d1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:332896938510:listener/app/ruvector-rag-alb/3568cbe0dfe904cc/f1113be21c44b852",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:332896938510:loadbalancer/app/ruvector-rag-alb/3568cbe0dfe904cc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.rag_app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rag_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:332896938510:targetgroup/ruvector-rag-app-tg/094979e33646a0d1",
            "arn_suffix": "targetgroup/ruvector-rag-app-tg/094979e33646a0d1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "8000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:332896938510:targetgroup/ruvector-rag-app-tg/094979e33646a0d1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ruvector-rag-app-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ruvector-rag-app-tg"
            },
            "tags_all": {
              "Name": "ruvector-rag-app-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rag_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:332896938510:targetgroup/ruvector-rag-app-tg/094979e33646a0d1-20260530194820034600000014",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:332896938510:targetgroup/ruvector-rag-app-tg/094979e33646a0d1",
            "target_id": "i-0c2c2309675955902"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_cloudwatch_log_group.rag_app",
            "aws_cloudwatch_log_group.ruvector",
            "aws_iam_instance_profile.rag_app",
            "aws_iam_instance_profile.ruvector",
            "aws_iam_role.rag_app",
            "aws_iam_role.ruvector",
            "aws_instance.ruvector",
            "aws_lb_target_group.rag_app",
            "aws_security_group.alb",
            "aws_security_group.rag_app",
            "aws_security_group.ruvector",
            "aws_spot_instance_request.rag_app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:route-table/rtb-0f3f39255426390ae",
            "id": "rtb-0f3f39255426390ae",
            "owner_id": "332896938510",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ruvector-rag-private-rt"
            },
            "tags_all": {
              "Name": "ruvector-rag-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:route-table/rtb-03fba06e05c89d35f",
            "id": "rtb-03fba06e05c89d35f",
            "owner_id": "332896938510",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d5f5b93ecbe6aa90",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ruvector-rag-public-rt"
            },
            "tags_all": {
              "Name": "ruvector-rag-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0645021012632f3a3",
            "route_table_id": "rtb-0f3f39255426390ae",
            "subnet_id": "subnet-0a5e520f480ad7965"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00efccfe8808b7539",
            "route_table_id": "rtb-03fba06e05c89d35f",
            "subnet_id": "subnet-027e6cee225e84b03"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048ed1bc893efa610",
            "route_table_id": "rtb-03fba06e05c89d35f",
            "subnet_id": "subnet-007b3707404b67d10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:security-group/sg-08711b0920d8ca845",
            "description": "Allow inbound HTTP to ALB from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08711b0920d8ca845",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ruvector-rag-alb-sg",
            "name_prefix": "",
            "owner_id": "332896938510",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ruvector-rag-alb-sg"
            },
            "tags_all": {
              "Name": "ruvector-rag-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rag_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:security-group/sg-0b7b52418a7f9f78b",
            "description": "Allow traffic to RAG App from ALB and admin SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7b52418a7f9f78b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08711b0920d8ca845"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "ruvector-rag-app-sg",
            "name_prefix": "",
            "owner_id": "332896938510",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ruvector-rag-app-sg"
            },
            "tags_all": {
              "Name": "ruvector-rag-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ruvector",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:security-group/sg-0b89f97b1142a325f",
            "description": "Allow traffic to RuVector only from RAG App",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b89f97b1142a325f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "RuVector API from RAG App",
                "from_port": 6333,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b7b52418a7f9f78b"
                ],
                "self": false,
                "to_port": 6333
              }
            ],
            "name": "ruvector-ruvector-sg",
            "name_prefix": "",
            "owner_id": "332896938510",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ruvector-ruvector-sg"
            },
            "tags_all": {
              "Name": "ruvector-ruvector-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.rag_app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:security-group/sg-0e76e8b70256ccd0e",
            "description": "Allow HTTPS from private subnet to VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e76e8b70256ccd0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "HTTPS from private subnet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ruvector-rag-vpce-sg",
            "name_prefix": "",
            "owner_id": "332896938510",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ruvector-rag-vpce-sg"
            },
            "tags_all": {
              "Name": "ruvector-rag-vpce-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:subnet/subnet-0a5e520f480ad7965",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5e520f480ad7965",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "332896938510",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ruvector-rag-private-subnet"
            },
            "tags_all": {
              "Name": "ruvector-rag-private-subnet"
            },
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:subnet/subnet-027e6cee225e84b03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027e6cee225e84b03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "332896938510",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ruvector-rag-public-subnet"
            },
            "tags_all": {
              "Name": "ruvector-rag-public-subnet"
            },
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:subnet/subnet-007b3707404b67d10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007b3707404b67d10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "332896938510",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ruvector-rag-public-subnet-b"
            },
            "tags_all": {
              "Name": "ruvector-rag-public-subnet-b"
            },
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:vpc/vpc-09c568c88721cd27c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-072fc204f894edfc1",
            "default_route_table_id": "rtb-01f2ec179301b5dd5",
            "default_security_group_id": "sg-0aad310a6f11f09d1",
            "dhcp_options_id": "dopt-059e5e6b1f6590602",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09c568c88721cd27c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01f2ec179301b5dd5",
            "owner_id": "332896938510",
            "tags": {
              "Name": "ruvector-rag-vpc"
            },
            "tags_all": {
              "Name": "ruvector-rag-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bedrock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:vpc-endpoint/vpce-0035ed5f6fc58bf02",
            "dns_entry": [
              {
                "dns_name": "vpce-0035ed5f6fc58bf02-xnbytb14.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0035ed5f6fc58bf02-xnbytb14-us-east-1a.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "bedrock-runtime.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05673612NHONMX8GJXS4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0035ed5f6fc58bf02",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0629ae2d43210ce79"
            ],
            "owner_id": "332896938510",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e76e8b70256ccd0e"
            ],
            "service_name": "com.amazonaws.us-east-1.bedrock-runtime",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.73",
                "subnet_id": "subnet-0a5e520f480ad7965"
              }
            ],
            "subnet_ids": [
              "subnet-0a5e520f480ad7965"
            ],
            "tags": {
              "Name": "ruvector-rag-bedrock-vpce"
            },
            "tags_all": {
              "Name": "ruvector-rag-bedrock-vpce"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch_logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:vpc-endpoint/vpce-0459ee7454b355463",
            "dns_entry": [
              {
                "dns_name": "vpce-0459ee7454b355463-13ubia26.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0459ee7454b355463-13ubia26-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02106662EETTRPA0B1V3"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0992317DMDKE7K4DONL"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0555236RC9XK9VLBNFC"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0210661EZ33HD4MFY7K"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0459ee7454b355463",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0d0b3cdd200916f83"
            ],
            "owner_id": "332896938510",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e76e8b70256ccd0e"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.112",
                "subnet_id": "subnet-0a5e520f480ad7965"
              }
            ],
            "subnet_ids": [
              "subnet-0a5e520f480ad7965"
            ],
            "tags": {
              "Name": "ruvector-rag-cloudwatch-vpce"
            },
            "tags_all": {
              "Name": "ruvector-rag-cloudwatch-vpce"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:vpc-endpoint/vpce-0aadd85f8c34db3c2",
            "dns_entry": [
              {
                "dns_name": "vpce-0aadd85f8c34db3c2-1xmgk3li.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0aadd85f8c34db3c2-1xmgk3li-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05550091TO4ONVVFK7RX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0aadd85f8c34db3c2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0761075964ffd71ec"
            ],
            "owner_id": "332896938510",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e76e8b70256ccd0e"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.76",
                "subnet_id": "subnet-0a5e520f480ad7965"
              }
            ],
            "subnet_ids": [
              "subnet-0a5e520f480ad7965"
            ],
            "tags": {
              "Name": "ruvector-rag-ec2messages-vpce"
            },
            "tags_all": {
              "Name": "ruvector-rag-ec2messages-vpce"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:vpc-endpoint/vpce-0490cfc3cb2a1ca3a",
            "dns_entry": [
              {
                "dns_name": "vpce-0490cfc3cb2a1ca3a-ho8abqfl.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0490cfc3cb2a1ca3a-ho8abqfl-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05464413OHC4BVQBDR23"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z0992270ZJA93SWK43CP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0490cfc3cb2a1ca3a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0124da871b1ce12eb"
            ],
            "owner_id": "332896938510",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e76e8b70256ccd0e"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.75",
                "subnet_id": "subnet-0a5e520f480ad7965"
              }
            ],
            "subnet_ids": [
              "subnet-0a5e520f480ad7965"
            ],
            "tags": {
              "Name": "ruvector-rag-ecr-api-vpce"
            },
            "tags_all": {
              "Name": "ruvector-rag-ecr-api-vpce"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:vpc-endpoint/vpce-00d322d917342c708",
            "dns_entry": [
              {
                "dns_name": "vpce-00d322d917342c708-bpve88lj.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00d322d917342c708-bpve88lj-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0210301V9X7QMY85KAU"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0210301V9X7QMY85KAU"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z099341738GCVI6H7YGQJ"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z099341738GCVI6H7YGQJ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00d322d917342c708",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a4518f0003e99fab"
            ],
            "owner_id": "332896938510",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e76e8b70256ccd0e"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.9",
                "subnet_id": "subnet-0a5e520f480ad7965"
              }
            ],
            "subnet_ids": [
              "subnet-0a5e520f480ad7965"
            ],
            "tags": {
              "Name": "ruvector-rag-ecr-dkr-vpce"
            },
            "tags_all": {
              "Name": "ruvector-rag-ecr-dkr-vpce"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:vpc-endpoint/vpce-026dedb111f28ff05",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-026dedb111f28ff05",
            "ip_address_type": "ipv4",
            "owner_id": "332896938510",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0f3f39255426390ae"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "ruvector-rag-s3-vpce"
            },
            "tags_all": {
              "Name": "ruvector-rag-s3-vpce"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:vpc-endpoint/vpce-0ec6c4ba238472d1a",
            "dns_entry": [
              {
                "dns_name": "vpce-0ec6c4ba238472d1a-cfwi2m7m.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ec6c4ba238472d1a-cfwi2m7m-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09929261SGX1YH00C9N3"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z05541259D2R618SCUI1"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ec6c4ba238472d1a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-045dbd9e31c844e82"
            ],
            "owner_id": "332896938510",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e76e8b70256ccd0e"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.188",
                "subnet_id": "subnet-0a5e520f480ad7965"
              }
            ],
            "subnet_ids": [
              "subnet-0a5e520f480ad7965"
            ],
            "tags": {
              "Name": "ruvector-rag-ssm-vpce"
            },
            "tags_all": {
              "Name": "ruvector-rag-ssm-vpce"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332896938510:vpc-endpoint/vpce-00e40a5e3159a643c",
            "dns_entry": [
              {
                "dns_name": "vpce-00e40a5e3159a643c-vhfxygxh.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00e40a5e3159a643c-vhfxygxh-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05469541JEVIZA6Y7L4M"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z05570133M3I66961H2Y4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00e40a5e3159a643c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-070222974c1fb3419"
            ],
            "owner_id": "332896938510",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e76e8b70256ccd0e"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.233",
                "subnet_id": "subnet-0a5e520f480ad7965"
              }
            ],
            "subnet_ids": [
              "subnet-0a5e520f480ad7965"
            ],
            "tags": {
              "Name": "ruvector-rag-ssmmessages-vpce"
            },
            "tags_all": {
              "Name": "ruvector-rag-ssmmessages-vpce"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09c568c88721cd27c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}